# resume.typ

./: .gitignore  Main.hs  README.md  Resume.hs  main.typ  resume.cabal  resume.typ  update.sh
latex/: Makefile
