cabal-version:       >=1.10
name:                resume
version:             114.514.1919.810
author:              wusyong
maintainer:          wusyong9104@gmail.com
build-type:          Simple
extra-source-files:  README.md

executable resume-gen
  main-is:          Main.hs
  other-modules:    TeX, Resume
  build-depends:    base >=4.14 && <4.15, mtl >=2.0
  hs-source-dirs:   .
  default-language: Haskell2010
